--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,9 +44,9 @@ dev_dependencies:
 flutter_icons:
   android: true
   ios: true
-  image_path: "assets/images/icons/bike_icon.png"
+  image_path: "assets/home/icons/bike_icon.png"
   adaptive_icon_background: "#ffffff"
-  adaptive_icon_foreground: "assets/images/icons/bike_icon_512.png"
+  adaptive_icon_foreground: "assets/home/icons/bike_icon_512.png"
 
 
   # The "flutter_lints" package below contains a set of recommended lints to
@@ -70,6 +70,8 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/images/core/
+    - assets/images/home/
+    - assets/images/svg/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
