--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -90,4 +90,8 @@ flutter:
       fonts:
         - asset: assets/fonts/Poppins-Medium.ttf
           weight: 500
+        - asset: assets/fonts/Poppins-Regular.ttf
+          weight: 400
+        - asset: assets/fonts/Poppins-Bold.ttf
+          weight: 700
 
