--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   cupertino_icons: ^1.0.8
   rename: ^3.0.2
   flutter_screenutil: ^5.9.3
+  flutter_svg: ^2.1.0
 
 dev_dependencies:
   flutter_test:
