--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   rename: ^3.0.2
   flutter_screenutil: ^5.9.3
   flutter_svg: ^2.1.0
+  animate_do: ^4.2.0
 
 dev_dependencies:
   flutter_test:
